# src/main/java/com/jobseekercopilot/documentstore/entity/DocumentOwnerErasureState.java
@@ -1,0 +1,7 @@
+package com.jobseekercopilot.documentstore.entity;
+
+public enum DocumentOwnerErasureState {
+    OBJECT_ERASURE_PENDING,
+    BACKUP_RETENTION_PENDING,
+    COMPLETED
+}
